# EyeTrackVR

./: .coveragerc  .gitignore  .releaserc  AdjustmentGUI.py  CALIBRATION_FIX_DOCUMENTATION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETE_FIX_SUMMARY.md  CONFIG_VALIDATION_FIX.md  Calibrate.py  CameraVeiwer.py  Dockerfile  EyeTrackVR.py  EyeTrackVR_ESP.py  FINAL_FIX_SUMMARY.md  FINAL_SUMMARY.md  Gemfile  LICENSE  LICENSE-SUMMER  Latest_Version.txt  Makefile  QUICK_REFERENCE.md  README.md  RECENTER_EYES_FIX.md  SECURITY.md  conftest.py  demonstrate_fix.py  docker-compose.yml  eye_tracking_vr.py  guikiv.py  pyproject.toml  todo.yaml  todo.yml  verify_fix.sh  修复总结_中文.md
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  issue-close-app.yml
.github/ISSUE_TEMPLATE/: Bug_report.md  config.yml
.github/scripts/: prepareCMD.sh
.github/workflows/: README.md  build-jekyll.txt  build-jekyll.yml  build.yml  build_master.txt  github-actions-change-variable.txt  github-actions-change-variable.yml  github-actions-template.txt  github-actions-template.yml  github-actions-writefile.yml  github-actions.yml  tauri-build.yml  write_file.txt  write_file.yml
EyeTrackApp/: .gitignore  .json  AHSF.py  algo_settings_widget.py  blink.py  blob.py  bsb_camera_widget.py  calibrate.bat  camera.py  camera_widget.py  center.bat  config.py  consts.py  daddy.py  daddy230210.onnx  ellipse_based_pupil_dilation.py  enums.py  exceptions.py  eye.py  eye_processor.py  eyetrack_settings.backup  eyetrackapp.py  eyetrackapp.spec  general_settings_widget.py  haar_surround_feature.py  hsrac.py  img_utils.py  intensity_based_openness.py  intensity_eye_open.py  keyboardHandler.py  leap.py  mommy.py  one_euro_filter.py  osc.py  osc_calibrate_filter.py  ransac.py  requirements.txt  settings_widget.py  test_list.txt  teyetrack_settings.json  (+1 more)
EyeTrackApp-DualCam/: camera_widget.py  cv2.pyi  eye_processor.py  eyetrackapp.py  one_euro_filter.py  osc.py
EyeTrackApp-DualCam/pye3dcustom/: kalman.py
EyeTrackApp-SingleCam/: config.py  eyetrackapp.spec  main.py  osc.py  ransac.py
EyeTrackApp-SingleCam/pye3dcustom/: refraction.py
EyeTrackApp/Benchmark/: bench_hsrac.py
EyeTrackApp/Camera/: CameraFactory.py  CameraState.py  ICameraSource.py  SerialCamera.py  SystemCamera.py  camera.py
EyeTrackApp/INNO/: ETVR_SETUP.iss
EyeTrackApp/OVR/: OpenVRService.py
EyeTrackApp/Tools/: calibrate.bat  center.bat
EyeTrackApp/osc/: OSCMessage.py  VRCFTModuleMessenger.py  VRChatOSCSender.py  osc.py  osc_input.py  osc_output.py
EyeTrackApp/oscManager/: osc.py  osc_output_handler.py
EyeTrackApp/pye3dcustom/: __init__.py
EyeTrackApp/settings/: BaseSettings.py  VRCFTModuleSettings.py  algo_settings_widget.py  base_settings.py  constants.py  general_settings_widget.py  settings_widget.py
EyeTrackApp/utils/: 3d_calib.py  CycleCounter.py  calibration_3d.py  calibration_elipse.py  debounce.py  eye_falloff.py  eye_utils.py  img_utils.py  mirrortrack.py  misc_utils.py  smart_inversion.py  time_utils.py
EyeTrackVR-App/: README.md
GUI/ETVR/: .eslintrc.json  .gitignore  .prettierrc.json  ETVR.code-workspace  README.md  db.json  etvr.scss  index.html  index.scss  package-lock.json  package.json  postcss.config.js  routes.json  tailwind.config.js  tsconfig.json  vite.config.ts
GUI/ETVR/src-tauri/: Cargo.toml  tauri.conf.json
GUI/ETVR/src-tauri/.cargo/: config.toml
GUI/ETVR/src-tauri/config/: config.json
GUI/ETVR/src-tauri/src/: main.rs
GUI/ETVR/src-tauri/src/mDNSQuery/: mod.rs
GUI/ETVR/src-tauri/src/modules/: mod.rs
GUI/ETVR/src-tauri/src/modules/m_dnsquery/: mod.rs
GUI/ETVR/src-tauri/src/modules/rest_client/: mod.rs
GUI/ETVR/src-tauri/src/rest_client/: mod.rs
GUI/figma/: App.fig
InceptionNet/: EyeTrackGUI.py  LICENSE  Readme.md  base_model.py  config.py  inferno.py  inferno_calib.py  lebrandbasic.py  models.py  pythoneye.py  requirements.txt  utils.py
RANSAC/: EyeTrackGUI.py  RANcalib.py  README.md  pupiltest.py
RANSAC3d/: RANSAC3d.py  README.md  SetROI.py  requirements.txt  threshGUI.py
RANSAC3d/pye3dcustom/: camera.py  detector_3d.py  observation.py
RANSACApp/: .gitignore  README.md  camera.py  config.py  main.py  main.spec  one_euro_filter.py  osc.py  ransac.py  requirements.txt  speech_engine.py
RANSACApp/pye3d.libs/: .load-order-pye3d-0.3.0
RANSACApp/pye3dcustom/: constants.py
TrackingBackend/app/: config.py  logger.py
docs/: 404.html  404.md  CNAME  README.md  Things_To_Know.md  _config.yml  gemfile  help.md  suggestions.md
docs/_includes/: comments.html  cookie_consent.html  footer_custom.html  ga.js  head.html  head_custom.html  header_custom.html  individuals.html  recent_articles.html
docs/_layout/: default.html
docs/_layouts/: authors.html  default.html  post.html
docs/_pages/: About.md  BuildGuide.md  Build_Guide.md  Build_Software.md  Comments.md  Configure_Firmware.md  FAQ  (+27 more)
repo-tools/: CODE_OWNERS.md  CONTRIBUTING.md  Doxyfile  todo.yml
scripts/: AdjustmentGUI.py  CameraVeiwer.py  ETVR_installer.iss  EyeTrackVR.py  EyeTrackVR_ESP.py  example_build_app_and_installer.bat  setup.sh
tests/: __init__.py  test_calibration_fix.py  test_calibration_integration.py  test_invalid_data_types.py  test_osc.py  test_osc_native_params.py  test_osc_v1_params.py  test_osc_v2_params.py  test_recenter_eyes_fix.py
(+229 files in other folders)
