[package]
name = "eyetrackvr"
version = "0.1.0"
description = "Eye tracking for VR"
authors = ["DaOfficialWizard"]
license = "MIT"
repository = "https://github.com/RedHawk989/EyeTrackVR"
default-run = "eyetrackvr"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1.1", features = ["api-all", "system-tray"] }
whoami  = "1.2.3"
window-shadows = "0.2.0"
sysinfo = "0.26.4"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

# [profile.release]
# panic = "abort" # Strip expensive panic clean-up logic
# codegen-units = 1 # Compile crates one after another so the compiler can optimize better
# lto = true # Enables link to optimizations
# opt-level = "s" # Optimize for binary size
# strip = true  # Automatically strip symbols from the binary.